# Core

./: .gitmodules  CMakeLists.txt
Core/: CMakeLists.txt  Core.cpp  Core.h  CoreAppDelegate.cpp  CoreAppDelegate.h  ICoreAppDelegate.h  IDescriptionScene.h  IFactoryScene.h  IManagerDescriptionScene.h  IManagerScene.h  IRender.h  IScene.h  ManagerDescriptionScene.cpp  ManagerDescriptionScene.h  ManagerScene.cpp  ManagerScene.h  MessagesCore.cpp  MessagesCore.h  Render.cpp  Render.h  SessionApp.cpp  SessionApp.h
subs/: CMakeLists.txt
